fix: prevent the horizontal scrollbar from appearing

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
     font-family: "DM Sans", serif;
     font-optical-sizing: auto;
     background: #030014;
+    overflow-x: hidden; /* prevent horizontal scroll action */
   }
 
   h1 {
